--- a/index.html
+++ b/index.html
@@ -1,11 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" 
+        href="https://bootswatch.com/5/litera/bootstrap.min.css">
+        <title>GitHub  Locator</title>
+    </head>
+
+    <body>
+
+        <nav class="navbar navbar-dark bg-primary mb-3">
+            <div class="container">
+                <a href="#" class="navbar-brand"> GitHub Finder</a>
+            </div>
+        </nav>
+        <div class="container searchContainer">
+            <div class="search card card-body">
+                <h1>Search GitHub Users</h1>
+                <p class="lead">Enter a username to fetch a user profile and repo</p>
+                <input type="text" id="searchUser" class="form-control" placeholder="GitHub Username...">
+            </div>
+            <br>
+            <div id="profile"></div>
+        </div>
+        
+        <footer class="mt-5 p-3 text-center bg-light">
+            GitHub Finder &copy;
+        </footer>
+
+        <script 
+        src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" 
+        integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" 
+        crossorigin="anonymous"></script>
+        <script 
+        src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" 
+        integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" 
+        crossorigin="anonymous"></script>
+
+        <script src="github.js"></script>
+        <script src="ui.js"></script>
+        <script src="app.js"></script>
+    </body>
 </html>
